# ScienceThingy

./: Cargo.toml
asteroid_simulation/: Cargo.toml
asteroid_simulation/src/: lib.rs  main.rs  setup.rs
src/: icosphere.rs  main.rs  shape.rs  sphere.rs  triangle.rs  unlit_material.rs
src/asteroids/: asteroids.rs
src/nuclear/: nuclear.rs
