[package]
name = "science"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "*"
bevy = "*"
rand = "*"

[[bin]]
name = "asteroids"
path = "src/asteroids/asteroids.rs"

[[bin]]
name = "nuclear"
path = "src/nuclear/nuclear.rs"